--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/recipe-plugin": "^1",
-        "cwp/cwp-installer": "2.1.x-dev",
+        "cwp/cwp-installer": "2.2.x-dev",
         "cwp/agency-extensions": "2.0.x-dev",
         "cwp/watea-theme": "2.0.x-dev",
         "silverstripe/controllerpolicy": "2.1.x-dev",
@@ -17,17 +17,14 @@
         "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
         "silverstripe/textextraction": "3.0.x-dev",
-	"silverstripe/realme": "3.0.x-dev"
+	    "silverstripe/realme": "3.0.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mikey179/vfsStream": "^1.6"
     },
     "extra": {
-        "project-files": [],
-        "branch-alias": {
-            "dev-master": "2.x-dev"
-        }
+        "project-files": []
     },
     "config": {
         "process-timeout": 600
