--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,8 @@
         "silverstripe/recipe-content-blocks": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
-        "colymba/gridfield-bulk-editing-tools": "dev-temp as 3.0.0"
+        "colymba/gridfield-bulk-editing-tools": "3.0.0-beta3"
     },
-    "repositories": [{
-        "type": "vcs",
-        "url": "git@github.com:creative-commoners/GridFieldBulkEditingTools.git"
-    }],
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mikey179/vfsStream": "^1.6"
