--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,18 @@
         "silverstripe/recipe-content-blocks": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-subsites": "2.0.x-dev",
         "dnadesign/silverstripe-elemental-userforms": "2.0.x-dev",
-        "colymba/gridfield-bulk-editing-tools": "3.0.0-beta4"
+        "colymba/gridfield-bulk-editing-tools": "dev-pulls/3.0/webpack-refactor as 3.0.0-beta4"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
         "mikey179/vfsStream": "^1.6"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:creative-commoners/gridfieldbulkeditingtools.git"
+        }
+    ],
     "extra": {
         "project-files": []
     },
