--- a/composer.json
+++ b/composer.json
@@ -6,23 +6,38 @@
         "php": ">=5.6.0",
         "silverstripe/recipe-plugin": "^1.2",
         "silverstripe/recipe-cms": "4.3.x-dev",
-        "silverstripe-themes/simple": "~3.2.0"
+        "silverstripe-themes/simple": "~3.2.0",
+        "dnadesign/silverstripe-elemental": "4.x-dev",
+        "silverstripe/elemental-fileblock": "2.x-dev",
+        "silverstripe/elemental-bannerblock": "2.x-dev",
+        "silverstripe/recipe-testing": "^1",
+        "silverstripe/postgresql": "2.1.x-dev"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "silverstripe/graphql-devtools": "dev-master"
     },
     "extra": {
-        "project-files": [
-            "app/_config/*",
-            ".env.example"
-        ],
-        "public-files": [
-            "assets/*",
-            "favicon.ico"
-        ],
         "branch-alias": {
             "4.x-dev": "4.3.x-dev"
-        }
+        },
+        "project-files-installed": [
+            "app/.htaccess",
+            "app/_config.php",
+            "app/_config/mysite.yml",
+            "app/src/Page.php",
+            "app/src/PageController.php",
+            "behat.yml",
+            "phpcs.xml.dist",
+            "phpunit.xml.dist"
+        ],
+        "public-files-installed": [
+            ".htaccess",
+            "index.php",
+            "install-frameworkmissing.html",
+            "install.php",
+            "web.config"
+        ]
     },
     "config": {
         "process-timeout": 600
