--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7",
-        "mikey179/vfsStream": "^1.6"
+        "mikey179/vfsStream": "^1.6",
+        "silverstripe/frameworktest": "dev-master"
     },
     "extra": {
         "project-files": [],
