--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_script:
 
   # Validate cow schema
   - composer global require silverstripe/cow ^2
-  - ~/.composer/vendor/bin/cow schema:validate
+  - ~/.config/composer/vendor/bin/cow schema:validate
 
 script:
   - if [[ $PHPUNIT_TEST ]]; then vendor/bin/phpunit --testsuite "$PHPUNIT_TEST"; fi
